<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_guide"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_guide"/>
    <item
        android:id="@+id/action_sign_out"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/action_sign_out"/>
    <item
        android:id="@+id/action_contact_us"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/action_contact_us">
        <menu>
            <item
                android:id="@+id/action_website"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/action_website"/>
            <item
                android:id="@+id/action_phone"
                android:orderInCategory="200"
                android:showAsAction="never"
                android:title="@string/action_phone"/>
            <item
                android:id="@+id/action_email"
                android:orderInCategory="300"
                android:showAsAction="never"
                android:title="@string/action_email"/>
        </menu>
    </item>

</menu>