<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/cotopaxi_logo_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/cotopaxi_logo"
            android:maxWidth="130dp"
            android:src="@drawable/cotopaxi_logo_orange" />

        <EditText
            android:id="@+id/email_address_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cotopaxi_logo_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="75dp"
            android:ems="14"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/email_address_entry"
            android:layout_alignRight="@+id/email_address_entry"
            android:layout_below="@+id/email_address_entry"
            android:layout_marginTop="35dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/email_address_entry"
            android:layout_alignRight="@+id/email_address_entry"
            android:layout_below="@+id/password_entry"
            android:layout_marginTop="35dp"
            android:background="@layout/light_orange_round_button_with_border"
            android:onClick="loginPressed"
            android:text="@string/login"
            android:textColor="@color/light_gray"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/login_button"
            android:layout_below="@+id/login_button"
            android:layout_marginTop="30dp"
            android:clickable="true"
            android:onClick="forgotPasswordPressed"
            android:text="@string/forgot_password"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/really_light_gray" />
    </RelativeLayout>

</ScrollView>