<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/footer_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:background="@color/really_dark_gray" >

    <TextView
        android:id="@+id/go_for_the_good"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:onClick="goForTheGoodPressed"
        android:text="@string/go_for_the_good"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/light_orange"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/total_points_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/hours_left_counter"
        android:layout_alignBottom="@+id/hours_left_counter"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:text="@string/total_points_counter"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/light_orange"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/hours_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/hours_left_counter"
        android:layout_below="@+id/hours_left_counter"
        android:text="@string/hours_left"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/light_gray"
        android:textSize="12sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/total_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/hours_left"
        android:layout_alignRight="@+id/total_points_counter"
        android:text="@string/total_points"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/light_gray"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/hours_left_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/go_for_the_good"
        android:layout_centerHorizontal="true"
        android:text="@string/hours_left_counter"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/light_gray"
        android:textSize="35sp"
        android:textStyle="bold"
        android:visibility="invisible" />

</RelativeLayout>